--- a/ispcan.html
+++ b/ispcan.html
@@ -17,7 +17,7 @@
         <!-- Cabeçalho com menu-->
         <nav>
             <ul class="nav-bar">
-                <li class="logo"> <div> <img src="imagens/cardeal-ico.png" alt="logo"><p>Instituto Dom <br> Cardeal Alexandre <br> do Nascimento</p></div></li>
+                <li class="logo"> <div> <img src="imagens/cardeal-ico.png" alt="logo"><p>Instituto Cardeal <br>Dom Alexandre <br> do Nascimento</p></div></li>
                 <input type="checkbox" name="check" id="icheck">
                 <span class="menu"> 
                    
